# wallpaper_rulette

./: .gitignore  CMakeLists.txt  README.md  execute_cpp_code  flake.nix
src/: config.cpp  config.h  main.cpp  systray.cpp  systray.h  wallpaper_manager.cpp  wallpaper_manager.h
